// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DmOngoingCallTileView > renders the tile > IncomingVideoCall 1`] = `
<div>
  <div
    class="Flex-module_flex TileContainer-module_container"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
  >
    <div
      class="Flex-module_flex common-module_content"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="Flex-module_flex CallIcon-module_container"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
      >
        <svg
          class="CallIcon-module_icon"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 4h10a2 2 0 0 1 2 2v4.286l3.35-2.871a1 1 0 0 1 1.65.76v7.65a1 1 0 0 1-1.65.76L18 13.715V18a2 2 0 0 1-2 2H6a4 4 0 0 1-4-4V8a4 4 0 0 1 4-4"
          />
        </svg>
      </div>
      <div
        class="Flex-module_flex common-module_content"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 6px; --mx-flex-wrap: nowrap;"
      >
        <span
          aria-label="@bob:m.org"
          class="_avatar_va14e_8 common-module_avatar"
          data-color="1"
          data-type="round"
          role="img"
          style="--cpd-avatar-size: 20px;"
        >
          <img
            alt=""
            class="_image_va14e_43"
            data-type="round"
            height="20px"
            loading="lazy"
            referrerpolicy="no-referrer"
            src="/static/profile-pics/profile1.png"
            width="20px"
          />
        </span>
        <div
          class="common-module_title"
        >
          Bob started a call
        </div>
      </div>
      <div
        class="Flex-module_flex"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: wrap-reverse;"
      >
        <div
          class="DurationView-module_container duration"
        >
          (
          <time
            class="mx_Clock DurationView-module_container duration"
            datetime="PT1M40S"
          >
            1:40
          </time>
          )
        </div>
        <button
          aria-disabled="false"
          class="_button_1nw83_8 _has-icon_1nw83_60"
          data-kind="primary"
          data-size="md"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 4h10a2 2 0 0 1 2 2v4.286l3.35-2.871a1 1 0 0 1 1.65.76v7.65a1 1 0 0 1-1.65.76L18 13.715V18a2 2 0 0 1-2 2H6a4 4 0 0 1-4-4V8a4 4 0 0 1 4-4"
            />
          </svg>
          Join
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DmOngoingCallTileView > renders the tile > IncomingVoiceCall 1`] = `
<div>
  <div
    class="Flex-module_flex TileContainer-module_container"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
  >
    <div
      class="Flex-module_flex common-module_content"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="Flex-module_flex CallIcon-module_container"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
      >
        <svg
          class="CallIcon-module_icon"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m20.958 16.374.039 3.527q0 .427-.33.756-.33.33-.756.33a16 16 0 0 1-6.57-1.105 16.2 16.2 0 0 1-5.563-3.663 16.1 16.1 0 0 1-3.653-5.573 16.3 16.3 0 0 1-1.115-6.56q0-.427.33-.757T4.095 3l3.528.039a1.07 1.07 0 0 1 1.085.93l.543 3.954q.039.271-.039.504a1.1 1.1 0 0 1-.271.426l-1.64 1.64q.505 1.008 1.154 1.909c.433.6 1.444 1.696 1.444 1.696s1.095 1.01 1.696 1.444q.9.65 1.909 1.153l1.64-1.64q.193-.193.426-.27t.504-.04l3.954.543q.406.059.668.359t.262.727"
          />
        </svg>
      </div>
      <div
        class="Flex-module_flex common-module_content"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 6px; --mx-flex-wrap: nowrap;"
      >
        <span
          aria-label="@bob:m.org"
          class="_avatar_va14e_8 common-module_avatar"
          data-color="1"
          data-type="round"
          role="img"
          style="--cpd-avatar-size: 20px;"
        >
          <img
            alt=""
            class="_image_va14e_43"
            data-type="round"
            height="20px"
            loading="lazy"
            referrerpolicy="no-referrer"
            src="/static/profile-pics/profile1.png"
            width="20px"
          />
        </span>
        <div
          class="common-module_title"
        >
          Bob started a call
        </div>
      </div>
      <div
        class="Flex-module_flex"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: wrap-reverse;"
      >
        <div
          class="DurationView-module_container duration"
        >
          (
          <time
            class="mx_Clock DurationView-module_container duration"
            datetime="PT1M40S"
          >
            1:40
          </time>
          )
        </div>
        <button
          aria-disabled="false"
          class="_button_1nw83_8 _has-icon_1nw83_60"
          data-kind="primary"
          data-size="md"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m20.958 16.374.039 3.527q0 .427-.33.756-.33.33-.756.33a16 16 0 0 1-6.57-1.105 16.2 16.2 0 0 1-5.563-3.663 16.1 16.1 0 0 1-3.653-5.573 16.3 16.3 0 0 1-1.115-6.56q0-.427.33-.757T4.095 3l3.528.039a1.07 1.07 0 0 1 1.085.93l.543 3.954q.039.271-.039.504a1.1 1.1 0 0 1-.271.426l-1.64 1.64q.505 1.008 1.154 1.909c.433.6 1.444 1.696 1.444 1.696s1.095 1.01 1.696 1.444q.9.65 1.909 1.153l1.64-1.64q.193-.193.426-.27t.504-.04l3.954.543q.406.059.668.359t.262.727"
            />
          </svg>
          Join
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DmOngoingCallTileView > renders the tile > OutgoingVideoCall 1`] = `
<div>
  <div
    class="Flex-module_flex TileContainer-module_container"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
  >
    <div
      class="Flex-module_flex common-module_content"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="Flex-module_flex CallIcon-module_container"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
      >
        <svg
          class="CallIcon-module_icon"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 4h10a2 2 0 0 1 2 2v4.286l3.35-2.871a1 1 0 0 1 1.65.76v7.65a1 1 0 0 1-1.65.76L18 13.715V18a2 2 0 0 1-2 2H6a4 4 0 0 1-4-4V8a4 4 0 0 1 4-4"
          />
        </svg>
      </div>
      <div
        class="Flex-module_flex common-module_content"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 6px; --mx-flex-wrap: nowrap;"
      >
        <span
          aria-label="@bob:m.org"
          class="_avatar_va14e_8 common-module_avatar"
          data-color="1"
          data-type="round"
          role="img"
          style="--cpd-avatar-size: 20px;"
        >
          <img
            alt=""
            class="_image_va14e_43"
            data-type="round"
            height="20px"
            loading="lazy"
            referrerpolicy="no-referrer"
            src="/static/profile-pics/profile1.png"
            width="20px"
          />
        </span>
        <div
          class="common-module_title"
        >
          Call started
        </div>
      </div>
      <div
        class="Flex-module_flex"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: wrap-reverse;"
      >
        <div
          class="DurationView-module_container duration"
        >
          (
          <time
            class="mx_Clock DurationView-module_container duration"
            datetime="PT1M40S"
          >
            1:40
          </time>
          )
        </div>
        <button
          aria-disabled="false"
          class="_button_1nw83_8 _has-icon_1nw83_60"
          data-kind="primary"
          data-size="md"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 4h10a2 2 0 0 1 2 2v4.286l3.35-2.871a1 1 0 0 1 1.65.76v7.65a1 1 0 0 1-1.65.76L18 13.715V18a2 2 0 0 1-2 2H6a4 4 0 0 1-4-4V8a4 4 0 0 1 4-4"
            />
          </svg>
          Join
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DmOngoingCallTileView > renders the tile > OutgoingVoiceCall 1`] = `
<div>
  <div
    class="Flex-module_flex TileContainer-module_container"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
  >
    <div
      class="Flex-module_flex common-module_content"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="Flex-module_flex CallIcon-module_container"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
      >
        <svg
          class="CallIcon-module_icon"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m20.958 16.374.039 3.527q0 .427-.33.756-.33.33-.756.33a16 16 0 0 1-6.57-1.105 16.2 16.2 0 0 1-5.563-3.663 16.1 16.1 0 0 1-3.653-5.573 16.3 16.3 0 0 1-1.115-6.56q0-.427.33-.757T4.095 3l3.528.039a1.07 1.07 0 0 1 1.085.93l.543 3.954q.039.271-.039.504a1.1 1.1 0 0 1-.271.426l-1.64 1.64q.505 1.008 1.154 1.909c.433.6 1.444 1.696 1.444 1.696s1.095 1.01 1.696 1.444q.9.65 1.909 1.153l1.64-1.64q.193-.193.426-.27t.504-.04l3.954.543q.406.059.668.359t.262.727"
          />
        </svg>
      </div>
      <div
        class="Flex-module_flex common-module_content"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 6px; --mx-flex-wrap: nowrap;"
      >
        <span
          aria-label="@bob:m.org"
          class="_avatar_va14e_8 common-module_avatar"
          data-color="1"
          data-type="round"
          role="img"
          style="--cpd-avatar-size: 20px;"
        >
          <img
            alt=""
            class="_image_va14e_43"
            data-type="round"
            height="20px"
            loading="lazy"
            referrerpolicy="no-referrer"
            src="/static/profile-pics/profile1.png"
            width="20px"
          />
        </span>
        <div
          class="common-module_title"
        >
          Call started
        </div>
      </div>
      <div
        class="Flex-module_flex"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: wrap-reverse;"
      >
        <div
          class="DurationView-module_container duration"
        >
          (
          <time
            class="mx_Clock DurationView-module_container duration"
            datetime="PT1M40S"
          >
            1:40
          </time>
          )
        </div>
        <button
          aria-disabled="false"
          class="_button_1nw83_8 _has-icon_1nw83_60"
          data-kind="primary"
          data-size="md"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m20.958 16.374.039 3.527q0 .427-.33.756-.33.33-.756.33a16 16 0 0 1-6.57-1.105 16.2 16.2 0 0 1-5.563-3.663 16.1 16.1 0 0 1-3.653-5.573 16.3 16.3 0 0 1-1.115-6.56q0-.427.33-.757T4.095 3l3.528.039a1.07 1.07 0 0 1 1.085.93l.543 3.954q.039.271-.039.504a1.1 1.1 0 0 1-.271.426l-1.64 1.64q.505 1.008 1.154 1.909c.433.6 1.444 1.696 1.444 1.696s1.095 1.01 1.696 1.444q.9.65 1.909 1.153l1.64-1.64q.193-.193.426-.27t.504-.04l3.954.543q.406.059.668.359t.262.727"
            />
          </svg>
          Join
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DmOngoingCallTileView > renders the tile > VideoCallInProgress 1`] = `
<div>
  <div
    class="Flex-module_flex TileContainer-module_container"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
  >
    <div
      class="Flex-module_flex common-module_content"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="Flex-module_flex CallIcon-module_container"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
      >
        <svg
          class="CallIcon-module_icon"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 4h10a2 2 0 0 1 2 2v4.286l3.35-2.871a1 1 0 0 1 1.65.76v7.65a1 1 0 0 1-1.65.76L18 13.715V18a2 2 0 0 1-2 2H6a4 4 0 0 1-4-4V8a4 4 0 0 1 4-4"
          />
        </svg>
      </div>
      <div
        class="Flex-module_flex common-module_content"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 6px; --mx-flex-wrap: nowrap;"
      >
        <div
          class="_stacked-avatars_va14e_109 common-module_facepile"
        >
          <span
            aria-label="@bob:m.org"
            class="_avatar_va14e_8"
            data-color="1"
            data-type="round"
            role="img"
            style="--cpd-avatar-size: 20px;"
          >
            <img
              alt=""
              class="_image_va14e_43"
              data-type="round"
              height="20px"
              loading="lazy"
              referrerpolicy="no-referrer"
              src="/static/profile-pics/profile1.png"
              width="20px"
            />
          </span>
          <span
            aria-label="@riley:m.org"
            class="_avatar_va14e_8"
            data-color="3"
            data-type="round"
            role="img"
            style="--cpd-avatar-size: 20px;"
          >
            <img
              alt=""
              class="_image_va14e_43"
              data-type="round"
              height="20px"
              loading="lazy"
              referrerpolicy="no-referrer"
              src="/static/profile-pics/profile2.png"
              width="20px"
            />
          </span>
        </div>
        <div
          class="common-module_title"
        >
          Call in progress
        </div>
      </div>
      <div
        class="Flex-module_flex"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: wrap-reverse;"
      >
        <div
          class="DurationView-module_container duration"
        >
          (
          <time
            class="mx_Clock DurationView-module_container duration"
            datetime="PT1M40S"
          >
            1:40
          </time>
          )
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DmOngoingCallTileView > renders the tile > VoiceCallInProgress 1`] = `
<div>
  <div
    class="Flex-module_flex TileContainer-module_container"
    style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
  >
    <div
      class="Flex-module_flex common-module_content"
      style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: nowrap;"
    >
      <div
        class="Flex-module_flex CallIcon-module_container"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: center; --mx-flex-gap: 0; --mx-flex-wrap: nowrap;"
      >
        <svg
          class="CallIcon-module_icon"
          fill="currentColor"
          height="20"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m20.958 16.374.039 3.527q0 .427-.33.756-.33.33-.756.33a16 16 0 0 1-6.57-1.105 16.2 16.2 0 0 1-5.563-3.663 16.1 16.1 0 0 1-3.653-5.573 16.3 16.3 0 0 1-1.115-6.56q0-.427.33-.757T4.095 3l3.528.039a1.07 1.07 0 0 1 1.085.93l.543 3.954q.039.271-.039.504a1.1 1.1 0 0 1-.271.426l-1.64 1.64q.505 1.008 1.154 1.909c.433.6 1.444 1.696 1.444 1.696s1.095 1.01 1.696 1.444q.9.65 1.909 1.153l1.64-1.64q.193-.193.426-.27t.504-.04l3.954.543q.406.059.668.359t.262.727"
          />
        </svg>
      </div>
      <div
        class="Flex-module_flex common-module_content"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: 6px; --mx-flex-wrap: nowrap;"
      >
        <div
          class="_stacked-avatars_va14e_109 common-module_facepile"
        >
          <span
            aria-label="@bob:m.org"
            class="_avatar_va14e_8"
            data-color="1"
            data-type="round"
            role="img"
            style="--cpd-avatar-size: 20px;"
          >
            <img
              alt=""
              class="_image_va14e_43"
              data-type="round"
              height="20px"
              loading="lazy"
              referrerpolicy="no-referrer"
              src="/static/profile-pics/profile1.png"
              width="20px"
            />
          </span>
          <span
            aria-label="@riley:m.org"
            class="_avatar_va14e_8"
            data-color="3"
            data-type="round"
            role="img"
            style="--cpd-avatar-size: 20px;"
          >
            <img
              alt=""
              class="_image_va14e_43"
              data-type="round"
              height="20px"
              loading="lazy"
              referrerpolicy="no-referrer"
              src="/static/profile-pics/profile2.png"
              width="20px"
            />
          </span>
        </div>
        <div
          class="common-module_title"
        >
          Call in progress
        </div>
      </div>
      <div
        class="Flex-module_flex"
        style="--mx-flex-display: flex; --mx-flex-direction: row; --mx-flex-align: center; --mx-flex-justify: start; --mx-flex-gap: var(--cpd-space-3x); --mx-flex-wrap: wrap-reverse;"
      >
        <div
          class="DurationView-module_container duration"
        >
          (
          <time
            class="mx_Clock DurationView-module_container duration"
            datetime="PT1M40S"
          >
            1:40
          </time>
          )
        </div>
      </div>
    </div>
  </div>
</div>
`;
